--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<h1>Move Your Mouse</h1>
-	<h2 class='shadow'>Dynamic Text</h2>
+	<h2 class='shadow'>Dynamic <br>Text</h2>
 	<br><br>
 	<h2 class="shadow">Effect</h2>
 
