--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			margin: 0;
 			left: 50%; top: 100px;
 			margin-left: -150px;
-		    width: 300px;
+		    width: 320px;
 		    color: #38f;
 		    text-align: center;
-		    font-size: 96px;
+		    font-size: 90px;
 		    text-align: center;
 		    transition-duration: .5s;
 		}
@@ -26,7 +26,7 @@
 </head>
 <body>
 	<h1>Move Your Mouse</h1>
-	<h2 class='shadow'>Dynamic<br>Text</h2>
+	<h2 class='shadow'>Dynamic Text</h2>
 	<br><br>
 	<h2 class="shadow">Effect</h2>
 
